# kp3

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: b8c7d4e5f123_add_world_model_tables.py  c9d8e7f6a012_add_world_model_shadow_tables.py  d0e1f2a3b456_add_world_model_branches.py  e935a08a6245_initial_schema.py  f1a2b3c4d567_add_evaluation_framework.py  g2b3c4d5e678_add_agent_id_to_passages.py  h3c4d5e6f789_rename_embedding_to_openai.py  i4d5e6f7g890_add_tags_tables.py  j5e6f7g8h901_add_memory_scopes.py
docs/: api-reference.md  cli-reference.md  e2e-test-procedure.md  hooks.md  kp3-v2.md  tutorial.md
examples/: README.md
examples/01_passages/: README.md  semantic_notes.py
examples/02_refs/: README.md  mutable_pointers.py
examples/03_scopes/: README.md  versioned_memory.py
examples/04_branches/: README.md  experimentation.py
examples/05_processing/: README.md  summarization_pipeline.py
examples/06_provenance/: README.md  derivation_chains.py
examples/07_hierarchical_memory/: README.md  hierarchical_memory.py
examples/importers/: sqlite_importer.py
prompts/: insert_v4.sql  insights_v4_system.txt  insights_v4_template.txt
scripts/: backfill_agent_id.sql  run-job.sh
src/kp3/: __init__.py  cli.py  config.py
src/kp3/db/: engine.py  models.py
src/kp3/evals/: __init__.py  analysis.py  models.py  runner.py  services.py
src/kp3/evals/scorers/: __init__.py  auto.py  rubric.py
src/kp3/hooks/: __init__.py
src/kp3/importers/: __init__.py
src/kp3/llm/: __init__.py  client.py  config.py
src/kp3/processors/: base.py  embedding.py  llm_prompt.py  world_model.py
src/kp3/providers/: __init__.py  deepseek.py
src/kp3/query_service/: __init__.py  main.py  mcp.py  models.py  router.py
src/kp3/schemas/: __init__.py  api.py  scope.py  world_model.py
src/kp3/scripts/: __init__.py  backfill_world_models.py  seed_prompts.py
src/kp3/services/: __init__.py  branches.py  derivations.py  passages.py  prompts.py  refs.py  runs.py  scopes.py  search.py  tags.py
src/synix/: pyproject.toml
tests/: __init__.py  conftest.py  test_branches.py  test_derivations.py  test_e2e_pipeline.py  test_embedding.py  test_llm_prompt.py  test_passages.py  test_prompts.py  test_query_service.py  test_refs.py  test_runs.py  test_scopes.py  test_scopes_e2e.py  test_tags.py  test_tags_e2e.py  test_world_model_schemas.py
tests/synix/fixtures/: chatgpt_export.json
