[project]
name = "synix"
version = "0.1.0"
description = "Synix - A declarative pipeline system for processing AI conversation exports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Mark Lubin", email = "mark@kairix.org"}
]
keywords = [
    "ai", "llm", "pipeline", "conversation", "export", "processing",
    "claude", "chatgpt", "sqlite", "fts"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    # Database
    "sqlalchemy>=2.0",
    # Config & validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # LLM
    "openai>=1.0",  # OpenAI-compatible API (DeepSeek, etc.)
    # CLI
    "click>=8.1",
    "python-dotenv>=1.2.1",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1",
]

[project.scripts]
synix = "synix.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print
    "RUF",    # ruff-specific
]
ignore = [
    "S101",    # assert used (fine in tests)
    "ANN401",  # Any type allowed (needed for flexible protocols)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
